<resources>
    <string name="app_name">MVVMSample</string>
    <string name="bind_exp">binding expressions</string>
    <string name="observable_data">observable data</string>
    <string name="change_title">change title</string>
    <string name="change_self">change self</string>
    <string name="unchecked">unchecked</string>
    <string name="long_click">Long Click</string>
    <string name="change_num">change num</string>
    <string name="change_content">change content</string>
    <string name="change_first_name">chang first name</string>
    <string name="change_last_name">change last name</string>
    <string name="change_user_name">change user name</string>
    <string name="change_all">change all</string>
    <string name="bind_adapter">binding adapter</string>
    <string name="bind_custom_adapter">bind custom adapter</string>
    <string name="bind_recycler_view">binding recyclerView</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
