<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="cn.tommyfen.mvvmsample.ViewModel"/>
        <variable
            name="viewModel"
            type="ViewModel"/>

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <Button
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/bind_exp"
                android:onClick="@{(view) -> viewModel.startLayoutBindExp(view)}"
                android:textAllCaps="false" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/observable_data"
                android:onClick="@{(view) -> viewModel.startObservableData(view)}"
                android:textAllCaps="false" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:textAllCaps="false"
                android:onClick="@{(view) -> viewModel.startBindingAdapter(view)}"
                android:text="@string/bind_adapter"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:textAllCaps="false"
                android:text="@string/bind_recycler_view"
                android:onClick="@{(view) -> viewModel.startBindingRecyclerView(view)}"/>


        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>

</layout>