<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="cn.tommyfen.mvvmsample.view_model.ViewModel2"/>

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@{String.valueOf(viewModel.num)}"
                    android:textSize="22sp"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    tools:text="1"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:text="@string/change_num"
                    android:onClick="@{() -> viewModel.changeNum()}"
                    android:textAllCaps="false"/>

            </RelativeLayout>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:textSize="22sp"
                android:gravity="center"
                android:text="@{viewModel.content}"
                tools:text="Hello, JetPack"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/change_content"
                android:textAllCaps="false"
                android:onClick="@{() -> viewModel.changeContent()}"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:gravity="center"
                android:text='@{"FirstName: " + viewModel.user.firstName}'
                tools:text="FirstName: Jake"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center"
                android:text='@{"LastName: " + viewModel.user.lastName}'
                tools:text="LastName: Wharton"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="8dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:onClick="@{() -> viewModel.changeFirstName()}"
                    android:text="@string/change_first_name"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:onClick="@{() -> viewModel.changeLastName()}"
                    android:text="@string/change_last_name"/>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:onClick="@{() -> viewModel.changeUserName()}"
                    android:text="@string/change_all"/>



            </LinearLayout>


        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>


</layout>