<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="cn.tommyfen.mvvmsample.view_model.ViewModel1" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@{viewModel.title}"
                android:textSize="22sp"
                tools:text="MVVM Sample" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:onClick='@{(view) -> viewModel.changeSelfDesc(view, "Had Change")}'
                android:text="@string/change_self"
                android:textAllCaps="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center"
                android:text='@{viewModel.title2??"nothing"}'
                android:textColor="@{(viewModel.title2 != null)? @color/colorPrimary:@color/colorAccent}"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/unchecked"
                android:onCheckedChanged="@{(cb, isChecked) -> viewModel.completeChanged(cb, isChecked)}"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:text="@string/long_click"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal"
                android:onLongClick="@{(view) -> viewModel.onLongClick(view)}"/>

        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>